# Jigsaw

./: .gitignore  README.md
Demo/Jigsaw/: gaming.cpp  gaming.ui  rankingdialog.cpp  rankingdialog.ui
Demo/Jigsaw-1/Algorithm/: AStar.cpp
Demo/Jigsaw-2/: Jigsaw.pro  gamelogic.h  mainwindow.h  rankbrowser.cpp  rankbrowser.h  setting_dialog.h  setting_dialog.ui  succeed_dialog.h
Demo/Jigsaw-2/picture/: picture.qrc
Demo/NetworkTest/: mainwindow.cpp  mainwindow.h  mainwindow.ui
Demo/Part-CS-Conn/NetworkTest/: mainwindow.cpp  mainwindow.ui
Demo/Rank/: widget.cpp  widget.ui
Demo/UI/: main.cpp
Demo/UI_3/: mainwindow.h
Demo/loginfo/: locallogic.cpp  locallogic.h
Documents/: C++实训服务端 API 文档.oedoc  UML1.vsdx  个人总结-张博霖.docx  会议记录_+8S.docx  实训答辩4.0.pptx  实训答辩4.1.pptx  实训答辩v4.5.pptx  实训答辩v4.6.pptx  开发进度.vsdx  拼图得分计算方式.docx  概要设计说明书.md  游戏流程.vsdx  软件结构.vsdx  需求分析.md  需求分析_+8S.doc  项目总结.docx
Documents/QtNotepad/: Qt学习笔记.md  Qt编程笔记-API.md  Qt编程笔记-细节处理.md  Qt编程笔记-解决方案.md
Documents/实训文档/: 会议记录_+8S.docx  概要设计说明书_+8S.doc  需求分析_+8S.doc
Jigsaw/: gaming.h
Jigsaw-server/Jigsaw-server/: jigsaw_server.py  requirements.txt
Jigsaw-server/Jigsaw-server/config/: __init__.py  default.py  development.py  production.py
Jigsaw-server/Jigsaw-server/templates/: index.html
Jigsaw/Jigsaw/: CMakeLists.txt  Jigsaw.pro  mainwindow.ui  rankingdialog.ui
Part-CS-Conn/: CMakeLists.txt  main.cpp
Part-CS-Conn/NetworkTest/: CMakeLists.txt  NetworkTest.pro  mainwindow.cpp  mainwindow.h  mainwindow.ui
Pintu_UI/: UI.pro  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui  setting_dialog.cpp  setting_dialog.ui
Practice/ProjectA/Calculate/: Calculate.pro  calculate.h
Practice/ProjectB/Clock/: Clock.pro  clock.cpp  clock.h
Practice/ProjectB/Clock_2/: Clock.pro
Project/Jigsaw/: CMakeLists.txt  Jigsaw.pro  gamelogic.cpp  gamelogic.h  mainwindow.cpp  mainwindow.h  mainwindow.ui  rankbrowser.cpp  rankbrowser.h  rankbrowser.ui  setting.cpp  setting.h  setting.ui  success.cpp  success.h  success.ui
Project/Jigsaw-server/: .python-version  jigsaw_server.py  uwsgi_config.ini
Project/Jigsaw/font/: font.qrc
Project/Jigsaw/picture/: picture.qrc
Project/Release/8Code_+8s_100/: setting.info
ProjectA/Calculate/: CMakeLists.txt  calculate.cpp  global.cpp  global.h  mainwindow.cpp  mainwindow.h  mainwindow.ui  ui_mainwindow.h
ProjectB/Clock/: Clock.pro  clock.cpp  clock.h  main.cpp
ProjectB/Clock_2/: Clock.pro.user.f461311.3.3-pre1  clock.cpp  clock.h  main.cpp
Resources/pic/: UI_color.fla  UI_pic.fla
TestFile/: TestTxt.txt
UI/: UI.pro  image.qrc  mainwindow.cpp  mainwindow.h  setting_dialog.cpp
UI_3/: image.qrc  mainwindow.cpp  mainwindow.h  mainwindow.ui  setting_dialog.cpp  setting_dialog.h
(+21 files in other folders)
